fake data các màn hình :
1.home
2.danh sách sản phẩm
3.chi tiết sản phẩm

--- a/FE/src/index.html
+++ b/FE/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html><html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular Bootstrap 5 Examples</title>  <base href="/">
+  <title>Healthy Drink Shop</title>  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icon/healthyIcon.png">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
 <app-root></app-root>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+<script src="src/js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="src/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="src/js/slick.min.js"></script>
+<script type="text/javascript" src="src/js/jquery.magnific-popup.min.js"></script>
+<script type="text/javascript" src="src/js/script.js"></script>
 </body>
 </html>
