--- a/FE/src/index.html
+++ b/FE/src/index.html
@@ -5,14 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icon/healthyIcon.png">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
 <app-root></app-root>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-<script src="src/js/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="src/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="src/js/slick.min.js"></script>
-<script type="text/javascript" src="src/js/jquery.magnific-popup.min.js"></script>
-<script type="text/javascript" src="src/js/script.js"></script>
 </body>
 </html>
