--- a/FE/src/index.html
+++ b/FE/src/index.html
@@ -11,5 +11,6 @@
 <body>
 <app-root></app-root>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+<script src="assets/env/env.ts"></script>
 </body>
 </html>
